tests/parser/define-class.7.bad.error
error: Malformed class definition
  --> test:4:0
   |
 4 |  (define-class)
   |  ^^^^^^^^^^^^^^ expected body
